# claude-multi-account-usage

./: .gitignore  CLAUDE.md  README.md  accounts.example.json  server.js
public/: index.html
tray/src/: index.html
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/src/: main.rs
web/: package-lock.json  package.json  server.js
web/public/: index.html
